Adapt the PR to 7.17